# cpp-ray-tracer

./: CMakeLists.txt  README.md
header/: color.h  hittable.h  ray.h  sphere.h  vec3.h
header/camera/: camera.h
header/core/: ray.h  vec3.h
header/objects/: cube.h  hittable.h  hittable_list.h  material.h  sphere.h  tetrahedron.h
header/utils/: color.h  rtweekend.h
src/: main.cc
